feat(): added splash-screen and menu style without background animation

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,29 @@
     <title>Jet goes brrr</title>
 </head>
 <body>
-    <h1>Jet goes brr</h1>
+    <div class="splash-screen">
+        <div class="splash-title">
+            Earth
+            <div class="cross-container">
+                <span class="spinning-cross">+</span>
+            </div>
+            defender
+        </div>
+    </div>
+    <div class="menu">
+        <div class="btn-container">
+            <button class="menu-btn" type="button">Game 1</button>
+        </div>
+        <div class="btn-container">
+            <button class="menu-btn" type="button">Game 2</button>
+        </div>
+        <div class="btn-container">
+            <button class="menu-btn" type="button">Game 3</button>
+        </div>
+        <div class="btn-container">
+            <a href="https://youtu.be/dQw4w9WgXcQ?t=43" target="_blank"><button class="exit-btn" type="button">Exit</button></a>
+        </div>
+    </div>
+    <div class="game"></div>
 </body>
 </html>
