--- a/src/template.html
+++ b/src/template.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="#">
     <title>Jet goes brrr</title>
 </head>
 <body>
@@ -17,13 +18,13 @@
     </div>
     <div class="menu">
         <div class="btn-container">
-            <button class="menu-btn" type="button">Game 1</button>
+            <button class="game-btn" type="button">Game 1</button>
         </div>
         <div class="btn-container">
-            <button class="menu-btn" type="button">Game 2</button>
+            <button class="game-btn" type="button">Game 2</button>
         </div>
         <div class="btn-container">
-            <button class="menu-btn" type="button">Game 3</button>
+            <button class="game-btn" type="button">Game 3</button>
         </div>
         <div class="btn-container">
             <a href="https://youtu.be/dQw4w9WgXcQ?t=43" target="_blank"><button class="exit-btn" type="button">Exit</button></a>
@@ -31,20 +32,15 @@
     </div>
     <div class="game"></div>
     <div class="star"></div>
-    <div class="meteor-1"></div>
-    <div class="meteor-2"></div>
-    <div class="meteor-3"></div>
-    <div class="meteor-4"></div>
-    <div class="meteor-5"></div>
-    <div class="meteor-6"></div>
-    <div class="meteor-7"></div>
-    <div class="meteor-8"></div>
-    <div class="meteor-9"></div>
-    <div class="meteor-10"></div>
-    <div class="meteor-11"></div>
-    <div class="meteor-12"></div>
-    <div class="meteor-13"></div>
-    <div class="meteor-14"></div>
-    <div class="meteor-15"></div>
+    <div class="alien-1"></div>
+    <div class="alien-2"></div>
+    <div class="alien-3"></div>
+    <div class="alien-4"></div>
+    <div class="alien-5"></div>
+    <div class="alien-6"></div>
+    <div class="alien-7"></div>
+    <div class="alien-8"></div>
+    <div class="alien-9"></div>
+    <div class="alien-10"></div>
 </body>
 </html>
