feat(): added different enemy spawn frequency based on which game button is clicked

--- a/src/template.html
+++ b/src/template.html
@@ -18,13 +18,13 @@
     </div>
     <div class="menu">
         <div class="btn-container">
-            <button class="game-btn" type="button">Game 1</button>
+            <button class="game-btn" type="button" data-enemy-spawn-frequency="2000">Game 1</button>
         </div>
         <div class="btn-container">
-            <button class="game-btn" type="button">Game 2</button>
+            <button class="game-btn" type="button" data-enemy-spawn-frequency="1750">Game 2</button>
         </div>
         <div class="btn-container">
-            <button class="game-btn" type="button">Game 3</button>
+            <button class="game-btn" type="button" data-enemy-spawn-frequency="1500">Game 3</button>
         </div>
         <div class="btn-container">
             <a href="https://youtu.be/dQw4w9WgXcQ?t=43" target="_blank"><button class="exit-btn" type="button">Exit</button></a>
